--- a/src/index.css
+++ b/src/index.css
@@ -174,19 +174,19 @@ header h1 {
 }
 
 .answer button.selected {
-  /* background: linear-gradient(180deg, #fbda81 0%, #f8b173 100%); */
+  background: linear-gradient(180deg, #fbda81 0%, #f8b173 100%);
   background: #f5a76c;
   color: #2c203d;
 }
 
 .answer button.correct {
-  /* background: linear-gradient(180deg, #a1fa61 0%, #52d482 100%); */
+  background: linear-gradient(180deg, #a1fa61 0%, #52d482 100%);
   background: #5af59d;
   color: #2c203d;
 }
 
 .answer button.wrong {
-  /* background: linear-gradient(180deg, #f96fb1 0%, #f52b8c 100%); */
+  background: linear-gradient(180deg, #f96fb1 0%, #f52b8c 100%);
   background: #f55a98;
   color: #2c203d;
 }
